[B]Version 2.7.2[/B]

- Fix for subtitles

[B]Version 2.7.2[/B]

- Fix for hulu search

[B]Version 2.7.1[/B]

- Update for Hulu site changes

[B]Version 2.7.0[/B]

- Rearranged Settings Panel
- Changed Default Settings
- Added settings for SWF Verify

[B]Version 2.6.9[/B]

- Fix for Popular, Recent, and Featured video names after second page.

[B]Version 2.6.8[/B]

- Fix for shows and movies with an apostrophe in their name

[B]Version 2.6.7[/B]

- added CDN priority selection

[B]Version 2.6.6[/B]

- Fix for videos with an apostrophe in their name

[B]Version 2.6.5[/B]

- Added artwork for Networks & Studios
- Huge speed up for Network & Studio lists


[B]Version 2.6.4[/B]

- intial offsite search support for
Adult Swim
Cartoon Network
CBS
TNT
TBS
MTV
VH1
CMT
Logo
Atom
Comedy Central
The Daily Show
South Park Digital Studios
Spike
TV Land
Revision3
Funny or Die
HBO
Nickelodeon
NickJr

[B]Version 2.6.3[/B]

- added search

[B]Version 2.6.2[/B]

- updated addon settings for compatability with xbmc4xbox

[B]Version 2.6.1[/B]

- fixed page and update listing bugs

[B]Version 2.6.0[/B]

- Added paging
- Added more per page settings

[B]Version 2.5.8[/B]

- UTF-8 encoding fix

[B]Version 2.5.7[/B]

- various fixes
- Enables subtitles

[B]Version 2.5.6[/B]

- Use pid from feed

[B]Version 2.5.5[/B]

- Added item count to some directory names

[B]Version 2.5.4[/B]

- Flattened "All" listing and forces 2000 items for listing.
- Added item count to directory listings
- Limit Popular, Recent and Featured Videos to 100 items
- No paging support. Custom per pages for different lists will be added with paging support

[B]Version 2.5.3[/B]

- added Hulu Plus filtering for non Plus Members

[B]Version 2.5.2[/B]

- added fanart to non show listings

[B]Version 2.5.1[/B]

- change default icon to hulu for any listing without one. 

[B]Version 2.5.0[/B]

- preview release of Hulu Plus support
